--- a/styles.css
+++ b/styles.css
@@ -211,8 +211,21 @@ button {
     .actions{
         display: none;
     }
+
+    .main{
+        margin-top: 130px;
+    }
+
+    h1{
+        font-size: 30px;
+    }
 }
 
+@media (max-width: 575px){
+    .banner > img{
+        width: 100%;
+    }
+}
 
 
 
